--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -216,13 +216,13 @@ h1, h2, h3, h4, h5, h6 {
 						<div class="collapse navbar-collapse" id="mainNav">
 							<ul class="nav main-menu navbar-nav">
 								<p:menubar id="menuBar" style="background-color: #ffcccc;">
-									<p:menuitem value="Ana Sayfa" />
-									<p:menuitem value="Saat" update=":form:pageCenterLocation"
+									<p:menuitem value="Home" />
+									<p:menuitem value="clock" update=":form:pageCenterLocation"
 										action="#{productBean.chooseCategory(1)}" />
 									<p:menuitem value="Led" update=":form:pageCenterLocation"
 										action="#{productBean.chooseCategory(2)}" />
 
-									<p:menuitem value="Hakkımızda"
+									<p:menuitem value="About us"
 										action="#{productBean.chooseCategory(3)}"
 										update=":form:pageCenterLocation" />
 								</p:menubar>
