--- a/WebContent/home.xhtml
+++ b/WebContent/home.xhtml
@@ -2,5 +2,5 @@
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-	<p>detail products</p>
+	<p>welcome</p>
 </ui:composition>
